--- a/app.yaml
+++ b/app.yaml
@@ -4,5 +4,42 @@ runtime: python
 api_version: 1
 
 handlers:
+
+- url: /apple-touch-icon\.png
+  mime_type: image/png
+  static_files: static/apple-touch-icon.png
+  upload: static/apple-touch-icon.png
+
+- url: /favicon\.ico
+  mime_type: image/png
+  static_files: static/favicon.ico
+  upload: static/favicon.ico
+
+- url: /(robots\.txt|humans\.txt|crossdomain\.xml)
+  static_files: static/\1
+  upload: static/(robots\.txt|humans\.txt|crossdomain\.xml)
+
+- url: /img/(.*\.(gif|png|jpg))
+  static_files: static/img/\1
+  upload: static/img/(.*\.(gif|png|jpg))
+
+- url: /swf/(.*\.swf)
+  static_files: static/swf/\1
+  upload: static/swf/(.*\.swf)
+
+- url: /css/(.*\.css)
+  mime_type: text/css
+  static_files: static/css/\1
+  upload: static/css/(.*\.css)
+
+- url: /js/(.*\.js)
+  mime_type: text/javascript
+  static_files: static/js/\1
+  upload: static/js/(.*\.js)
+
+- url: /audio/(.*\.(wav|mp3|ogg))
+  static_files: static/audio/\1
+  upload: static/audio/(.*\.(wav|mp3|ogg))
+  
 - url: /.*
   script: main.py
